--- a/inqbus.lidar.scc_gui/src/inqbus/lidar/scc_gui/UI/axisCtrlTemplate.ui
+++ b/inqbus.lidar.scc_gui/src/inqbus/lidar/scc_gui/UI/axisCtrlTemplate.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>215</width>
-    <height>309</height>
+    <width>384</width>
+    <height>515</height>
    </rect>
   </property>
   <property name="maximumSize">
@@ -51,6 +51,9 @@
         <string>0</string>
        </property>
       </widget>
+     </item>
+     <item>
+      <widget class="QComboBox" name="unitCombo"/>
      </item>
     </layout>
    </item>
