--- a/inqbus.lidar.scc_gui/src/inqbus/lidar/scc_gui/UI/save_as_scc_dialog.ui
+++ b/inqbus.lidar.scc_gui/src/inqbus/lidar/scc_gui/UI/save_as_scc_dialog.ui
@@ -116,6 +116,19 @@
     <number>255</number>
    </property>
   </widget>
+  <widget class="QPushButton" name="openFile">
+   <property name="geometry">
+    <rect>
+     <x>250</x>
+     <y>80</y>
+     <width>85</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Open File</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections>
