Added BaseStructure for ResultPlots

--- a/inqbus.lidar.scc_gui/src/inqbus/lidar/scc_gui/UI/app_design.ui
+++ b/inqbus.lidar.scc_gui/src/inqbus/lidar/scc_gui/UI/app_design.ui
@@ -34,7 +34,7 @@
      <string>New</string>
     </property>
     <addaction name="actionLIDARPlot"/>
-    <!--<addaction name="action3_2_1"/>-->
+    <addaction name="action3_2_1"/>
    </widget>
    <addaction name="menuNew"/>
   </widget>
