generate raw data files with new measurement_id (15 digits with 3 digit station_id)

--- a/inqbus.lidar.scc_gui/src/inqbus/lidar/scc_gui/UI/save_as_sccDPcal_dialog.ui
+++ b/inqbus.lidar.scc_gui/src/inqbus/lidar/scc_gui/UI/save_as_sccDPcal_dialog.ui
@@ -52,10 +52,10 @@
     </rect>
    </property>
    <property name="text">
-    <string>YYYYMMDDSSNN</string>
+    <string>YYYYMMDDSSShhmm</string>
    </property>
    <property name="maxLength">
-    <number>12</number>
+    <number>15</number>
    </property>
   </widget>
   <widget class="QLabel" name="label_2">
